--- a/public/src/sass/app.css
+++ b/public/src/sass/app.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("http://fonts.cdnfonts.com/css/geometria");
 * {
   font-family: 'Geometria', sans-serif;
@@ -6238,5 +6239,63 @@ nav .testcow {
 
 nav li:hover {
   text-decoration: underline;
+}
+
+.allpagebody {
+  margin: 5% 15%;
+  color: #363636;
+}
+
+.allpagebody h1 {
+  text-align: center;
+  font-size: 3vw;
+  font-weight: 400;
+  margin-bottom: 5%;
+}
+
+.allpagebody hr {
+  background-color: #9b009d;
+  width: 5%;
+  margin-bottom: 5%;
+  height: 1px;
+}
+
+.allpagebody p {
+  font-size: 0.84vw;
+  text-align: justify;
+  font-weight: 500;
+}
+
+.allpagebody ul {
+  margin-top: 5%;
+  font-size: 0.84vw;
+  font-weight: 500;
+  width: 97%;
+  list-style-type: none;
+  text-align: justify;
+  margin-bottom: 5%;
+}
+
+.allpagebody li {
+  margin: 2%;
+  margin-left: -2%;
+}
+
+.allpagebody li::before {
+  content: "•";
+  color: purple;
+  font-weight: bold;
+  font-size: 1.3vw;
+  margin: 0.5vw;
+  margin-left: -1vw;
+}
+
+.allpagebody h2 {
+  font-size: 2.3vw;
+  font-weight: 500;
+}
+
+.allpagebody .para2 {
+  margin: 3% 0;
 }
 /*# sourceMappingURL=app.css.map */
