--- a/public/src/sass/module/_header.sass
+++ b/public/src/sass/module/_header.sass
@@ -21,11 +21,11 @@
             opacity: 50%
             font-weight: 500
         input
-            height: 25px
+            height: 2vw
             border: none
             border-radius: 5px
         button
-            height: 25px
+            height: 2vw
             border: none
             border-radius: 5px
             background-color: #00e173
