--- a/public/src/sass/app.sass
+++ b/public/src/sass/app.sass
@@ -14,3 +14,5 @@ $fa-font-path : "../../../node_modules/@fortawesome/fontawesome-free/webfonts"
 @import ./module/_header
 //body page
 @import ./module/_bodypage
+//footer
+@import ./module/_footer
