page fini avec modification

--- a/src/sass/module/_footer.sass
+++ b/src/sass/module/_footer.sass
@@ -1,7 +1,7 @@
 footer
     background-color: $fcolor
     margin-top: 5%
-    height: 68vh
+    height: 25vw
     color: #fff
     section
         display: flex
