--- a/src/sass/module/_header.sass
+++ b/src/sass/module/_header.sass
@@ -30,6 +30,7 @@
             border-radius: 5px
             background-color: #00e173
             margin-left: 5px
+            color: #fff
 
 nav
     display: flex
@@ -50,3 +51,10 @@ nav
         margin-left: 20%
     li:hover
         text-decoration: underline
+
+
+@media screen and ( min-width: 1024px ) and ( max-width: 1439px )
+    nav
+        ul
+            margin-left: -5%
+    
