--- a/src/sass/module/_header.sass
+++ b/src/sass/module/_header.sass
@@ -3,8 +3,12 @@
     background-color: #9b009d
     height: 2.5vw
     align-items: center
+    @media screen and (min-width: 375px) and ( max-width: 767px )
+        height: 5vw
     .imagemany
         width: 5%
+        @media screen and (min-width: 375px) and ( max-width: 767px )
+            display: none
         img
             width: 55%
             opacity: 50%
@@ -20,17 +24,34 @@
             color: #ffffff
             opacity: 50%
             font-weight: 500
+            @media screen and (min-width: 375px) and ( max-width: 767px )
+                font-size: 2vw
         input
             height: 2vw
             border: none
             border-radius: 5px
+            @media screen and (min-width: 768px) and ( max-width: 1023px )
+                height: 1.7vw
+                border-radius: 3px
+                width: 12%
+            @media screen and (min-width: 375px) and ( max-width: 767px )
+                width: 15%
+                height: 3.5vw
+                font-size: 2.5vw
         button
-            height: 2vw
+            height: 2.1vw
             border: none
             border-radius: 5px
             background-color: #00e173
             margin-left: 5px
             color: #fff
+            @media screen and (min-width: 768px) and ( max-width: 1023px )
+                height: 1.8vw
+                font-size: 1.2vw
+                border-radius: 3px
+            @media screen and (min-width: 375px) and ( max-width: 767px )
+                height: 4vw
+                font-size: 2.3vw
 
 nav
     display: flex
@@ -39,22 +60,32 @@ nav
         width: 40%
         margin-top: 4%
         margin-left: 20%
+        @media screen and (min-width: 768px) and ( max-width: 1023px )
+            width: 30%
+            margin-left: 15%
+        @media screen and (min-width: 375px) and ( max-width: 767px )
+            display: none
     ul
         list-style-type: none
         display: flex
         width: 90%
+        @media screen and (min-width: 768px) and ( max-width: 1023px )
+            margin-left: -15%
+        @media screen and (min-width: 375px) and ( max-width: 767px )
+            margin-left: -7%
+            width: 100%
     li
         margin: 2%
         font-size: 0.7vw
         font-weight: 700
+        @media screen and (min-width: 768px)
+            margin: auto
+        @media screen and (min-width: 375px) and ( max-width: 767px )
+            font-size: 1.3vw
+            margin: auto
     .testcow
         margin-left: 20%
     li:hover
         text-decoration: underline
 
-
-@media screen and ( min-width: 1024px ) and ( max-width: 1439px )
-    nav
-        ul
-            margin-left: -5%
     
