--- a/src/sass/module/_footer.sass
+++ b/src/sass/module/_footer.sass
@@ -3,6 +3,10 @@ footer
     margin-top: 5%
     height: 25vw
     color: #fff
+    @media screen and (min-width: 1024px) and ( max-width: 1439px )
+        height: 28vw
+    @media screen and (min-width: 768px) and ( max-width: 1023px )
+        height: 32vw
     section
         display: flex
         justify-content: center
@@ -10,6 +14,9 @@ footer
         font-size: 1vw
         height: 10vw
         border-bottom: solid rgb(60, 60, 60) 0.5px
+        @media screen and (min-width: 375px) and ( max-width: 767px )
+            font-size: 3vw
+            height: 15vw
         .divnetwork
             margin: 3%
     .imagebottom
@@ -17,9 +24,16 @@ footer
         justify-content: center
         margin-top: 3vw
         margin-bottom: 3vw
+        @media screen and (min-width: 375px) and ( max-width: 767px )
+            display: none
     .copyright 
         color: #fff
         opacity: 50%
         text-align: center
         font-size: 0.7vw
+        @media screen and (min-width: 768px) and ( max-width: 1023px )
+            font-size: 1vw
+        @media screen and (min-width: 375px) and ( max-width: 767px )
+            font-size: 2vw
+            margin-top: 5%
 
